ensures textarea won't be stretched horizonally

--- a/css/main.css
+++ b/css/main.css
@@ -913,6 +913,10 @@ label {
     grid-area: form;
   }
 
+  textarea {
+    resize: vertical;
+  }
+
   /* Styling hours */
 
   .hours {
